Cultibox (2.0.21) precise; urgency=low
    + Correction de l'export d'une image des logs et du blockUI 
    + Ajout des couleurs pour les courbes des capteurs 5 et 6

-- Yann Genevois <yann.genevois@cultibox.fr> Sat Dec 20 12:26:18 CEST 2014


Cultibox (2.0.20) precise; urgency=low
    + Nettoyage des fonctions et locales inutilisées

-- Yann Genevois <yann.genevois@cultibox.fr> Fri Dec 12 17:14:12 CEST 2014


Cultibox (2.0.19) precise; urgency=low
    + Correction de la génération des plugv avec les programmes journaliers

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Dec 11 16:40:43 CEST 2014


Cultibox (2.0.18) precise; urgency=low
    + Suppréssion de la partie Wifi dans le logiciel cultibox
    + Ajout d'une variable pour déterminer le fonctionnement: cultibox ou cultipi

-- Yann Genevois <yann.genevois@cultibox.fr> Mon Dec 08 20:08:49 CEST 2014


Cultibox (2.0.18) precise; urgency=low
    + Correction appel l'affichage des logs pour un mois

-- Yann Genevois <yann.genevois@cultibox.fr> Mon Dec 08 10:44:19 CEST 2014


Cultibox (2.0.17) precise; urgency=low
    + Correction appel en AJAX

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Dec 02 20:56:45 CEST 2014


Cultibox (2.0.16) precise; urgency=low
    + Mise à jour de la documentation
    + Correction de la gestion des menu en AJAX

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Dec 02 17:49:14 CEST 2014


Cultibox (2.0.15) precise; urgency=low
    + Suppréssion des restes de Joomla

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Nov 26 14:06:49 CEST 2014


Cultibox (2.0.14) precise; urgency=low
    + La carte SD n'est pas vérifiée à chaque chargement de page
    + Correction de l'affichage des powers sous Windows

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Nov 19 16:34:13 CEST 2014


Cultibox (2.0.13) precise; urgency=low
    + Optimisation du calcul du fichier plugv

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Nov 18 20:23:12 CEST 2014


Cultibox (2.0.12) precise; urgency=low