@@ -748,6 +748,9 @@
 
 <div id="preparing-file-modal" title="" style="display: none;"><?php echo __('PREPARING_EXPORT'); ?></div>
 
+<div id="msg_power" title="" style="display: none;"></div>
+
+
 
 <div id="export_log_div" title="<?php echo __('MANAGE_EXPORT_LOG_CSV_BUTTON'); ?>" style="display:none">
     <table class="table_width">
